--- a/index.html
+++ b/index.html
@@ -198,13 +198,14 @@
 
 										<li><P>Simon, D.A., Cappellari, M., and <b>Hartke, J.</b> 2023, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2023arXiv230318229S">Supermassive black hole mass in the massive elliptical galaxy M87 from integral-field stellar dynamics using OASIS and MUSE with adaptive optics: assessing systematic uncertainties</A></li>
 							
-									<!-- </ul>
+									</ul>
 									<h4>In press</h4>
 									<ul class="alt">
-										<li><P>Pulsoni, C., Gerhard, O., Fall, S.M., Arnaboldi, M., Ennis, A.I., <b>Hartke, J.</b>, Coccato, L., and Napolitano, N.R. 2023, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2023arXiv230306132P">The extended Planetary Nebula Spectrograph (ePN.S) early-type galaxy survey: The specific angular momentum of ETGs</A></li>
-									</ul> -->
+										<li><P>Iodice, E., Hilker, M., Doll, G., Mirabile, M., Buttitta, C., <b>Hartke, J.</b>, Mieske, S., Cantiello, M., D&#x27;Ago, G., Forbes, D.A., Gullieuszik, M., Rejkuba, M., Spavone, M., Spiniello, C., Arnaboldi, M., Corsini, E.M., Greggio, L., Falcón-Barroso, J., Fahrion, K., Fritz, J., La Marca, A., Paolillo, M., Raj, M.A., Rampazzo, R., Sarzi, M., and Capasso, G. 2023, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2023arXiv230811493I">Looking into the faintEst WIth MUSE (LEWIS): on the nature of ultra-diffuse galaxies in the Hydra-I cluster.I. Project description and preliminary results</A></li>
+									</ul>
 										<h4>Refereed publications</h4>
 									<ul class="alt">
+										<li><P>Forbes, D.A., Gannon, J., Iodice, E., Hilker, M., Doll, G., Buttitta, C., Marca, A.L., Arnaboldi, M., Cantiello, M., D&#x27;Ago, G., Falcon Barroso, J., Greggio, L., Gullieuszik, M., <b>Hartke, J.</b>, Mieske, S., Mirabile, M., Rampazzo, R., Rejkuba, M., Spavone, M., Spiniello, C., and Capasso, G. 2023, Monthly Notices of the Royal Astronomical Society, <A href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.525L..93F">Ultra diffuse galaxies in the Hydra I cluster from the LEWISProject: Phase-Space distribution and globular cluster richness</A></li>
 										<li><P>Pulsoni, C., Gerhard, O., Michael Fall, S., Arnaboldi, M., Ennis, A.I., <b>Hartke, J.</b>, Coccato, L., and Napolitano, N.R. 2023, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2023A&amp;A...674A..96P">The extended Planetary Nebula Spectrograph (ePN.S) early-type galaxy survey: The specific angular momentum of ETGs</A></li>
 										<li><P>Martín-Navarro, I., Spiniello, C., Tortora, C., Coccato, L., D&#x27;Ago, G., Ferré-Mateu, A., Pulsoni, C., <b>Hartke, J.</b>, Arnaboldi, M., Hunt, L., Napolitano, N.R., Scognamiglio, D., and Spavone, M. 2023, Monthly Notices of the Royal Astronomical Society, <A href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.521.1408M">INSPIRE: INvestigating Stellar Population In RElics - IV. The initial mass function slope in relics</A></li>
 										<li><P>D&#x27;Ago, G., Spiniello, C., Coccato, L., Tortora, C., La Barbera, F., Arnaboldi, M., Bevacqua, D., Ferré-Mateu, A., Gallazzi, A., <b>Hartke, J.</b>, Hunt, L.K., Martín-Navarro, I., Napolitano, N.R., Pulsoni, C., Radovich, M., Saracco, P., Scognamiglio, D., and Zibetti, S. 2023, Astronomy and Astrophysics, <A href="https://ui.adsabs.harvard.edu/abs/2023A&amp;A...672A..17D">INSPIRE: INvestigating Stellar Population In RElics. III. Second data release (DR2): testing the systematics on the stellar velocity dispersion</A></li>
