--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 											</li>
 										</ul>
 
-									<h4>In press</h4>
+									<!-- <h4>In press</h4>
 									<ul class="alt">
 										<li><P>Gran, F., Kordopatis, G., Zoccali, M., Hill, V., Saviane, I., Navarrete, C., Rojas-Arriagada, A., Carballo-Bello, J., <b>Hartke, J.</b>, Valenti, E., Contreras Ramos, R., De Leo, M., and Fabbro, S. 2023, arXiv e-prints, <A href="https://ui.adsabs.harvard.edu/abs/2023arXiv231009868G">The treasure behind the haystack: MUSE analysis of five recently discovered globular clusters</A></li>
 
@@ -232,7 +232,7 @@
 										href="https://ui.adsabs.harvard.edu/#abs/2017ApJ...836..234S">Modeling the
 										Gravitational Potential of a Cosmological Dark Matter Halo with Stellar
 										Streams</A></li>
-									</ul>
+									</ul> -->
 								<!-- <h4> Conference Proceedings </h4>
 							<ul class="alt">
 								<li><P><b>Hartke, J.</b> 2019, Light in the Suburbs: Structure and Chemodynamics of Galaxy Halos. Proceedings of the conference held 9-14 June, <A href="https://ui.adsabs.harvard.edu/abs/2019lssc.confE..18H">What are the progenitors of the intragroup light stars around M49?</A></li>
@@ -308,7 +308,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Johanna Hartke. Updated August 2023. All rights reserved. </li><li>&copy; Profile picture: Chris Coe. </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
+								<li>&copy; Johanna Hartke. Updated August 2024. All rights reserved. </li><li>&copy; Profile picture: Chris Coe. </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Hosted by <a href:"https://pages.github.com">GitHub Pages</a></li>
 							</ul>
 							<ul class='copyright'>
 								<li>This webpage contains links to third party pages. The creator of this webpage is not responsible for the content or information contained in any of the linked sites.
