--- a/index.html
+++ b/index.html
@@ -293,9 +293,8 @@
 																				<div>Finland</div>
 																			</div></li>
 										<li class="fa-envelope"><a href="mailto:johanna.hartke@utu.fi">johanna.hartke@utu.fi</a></li>
-										<li class="fa-twitter"><a href="https://twitter.com/johannahartke">@JohannaHartke</a></li>
+										<li class="fa-star"><a href="https://bsky.app/profile/jhartke.bsky.social">@jhartke.bsky.social</a></li>
 										<li class="fa-github"><a href="https://github.com/jhartke">jhartke</a></li>
-										<li class="fa-star"><a rel="me" href="https://astrodon.social/@johannahartke">johannahartke@astrodon.social</a>
 									</ul>
 								</div>
 							</section>
