No more twitter

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://twitter.com/johannahartke" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<!-- <li><a href="https://twitter.com/johannahartke" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
 						<li><a href="https://github.com/jhartke" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:johanna.hartke@utu.fi" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
